added views and report feature

--- a/Final_Project_CIS262/Views/Shared/_Layout.cshtml
+++ b/Final_Project_CIS262/Views/Shared/_Layout.cshtml
@@ -23,6 +23,10 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Students", "Index", "Student")</li>
+                    <li>@Html.ActionLink("Teachers", "Index", "Teacher")</li>
+                    <li>@Html.ActionLink("Exams", "Index", "Exam")</li>
+                    <li>@Html.ActionLink("Report", "Index", "Report")</li>
                 </ul>
             </div>
         </div>
